--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -17,5 +17,6 @@
             {% include 'navbar.html.twig' %}
         {% endblock %}
     </nav>
+    {% include '_footer.html.twig' %}
 </body>
 </html>
